# servo-perf

./: .gitignore  Cargo.toml  README.md  build.rs
docs/: wpr-setup.md
fixtures/: gen_cert.sh  h2_server.js  https_server.py
fixtures/www/: a.css  a.js  index.html  multi.html  simple.html
src/: cli.rs  fixtures.rs  main.rs  ohos.rs  proto.rs  report.rs  runner.rs  stats.rs  trace.rs  workload.rs
src/cmd/: ab.rs  bench.rs  mod.rs  regression.rs
tests/: e2e.rs  fixture_server.rs
tests/fake_servoshell/: Cargo.toml
tests/fake_servoshell/src/: main.rs
tests/fixtures/: minimal.pftrace
workloads/: _critical_path.toml  _critical_path_ohos.toml  cdn-huaweimossel-live.toml  cdn-huaweimossel-paintonly-baseline.toml  cdn-huaweimossel-paintonly-on.toml  cdn-huaweimossel.toml  h1-multi.toml  h2-multi.toml  localhost-simple.toml
