[package]
name = "servoperf"
version = "0.1.0"
edition = "2021"
publish = false
description = "Servo startup-performance measurement tool"

[[bin]]
name = "servoperf"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
prost = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
