[package]
name = "servoperf"
version = "0.1.0"
edition = "2021"
publish = false
description = "Servo startup-performance measurement tool"

[[bin]]
name = "servoperf"
path = "src/main.rs"

[[bin]]
name = "fixture_server"
path = "src/bin/fixture_server.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
prost = "0.13"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "fs", "io-util", "sync"] }
tokio-rustls = "0.26"
toml = "0.8"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
